[gd_scene load_steps=3 format=3 uid="uid://cd5plqj6d1rdf"]

[ext_resource type="Script" path="res://addons/dialogue_viewer/dialogue_dock.gd" id="1_74bs2"]
[ext_resource type="Texture2D" uid="uid://dpyg026rdaquh" path="res://icon.svg" id="2_kke0o"]

[node name="Dialogue Viewer" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_74bs2")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 2

[node name="Character Box" type="VBoxContainer" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 175)
layout_mode = 2

[node name="TextureRect" type="TextureRect" parent="HBoxContainer/Character Box"]
layout_mode = 2
texture = ExtResource("2_kke0o")
stretch_mode = 5

[node name="Label" type="Label" parent="HBoxContainer/Character Box"]
layout_mode = 2
text = "Placeholder Name"
horizontal_alignment = 1

[node name="Buttons" type="HBoxContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 10
size_flags_vertical = 4

[node name="SaveButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Save"

[node name="SaveAsButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Save as"

[node name="LoadButton" type="Button" parent="HBoxContainer/Buttons"]
layout_mode = 2
text = "Load"

[node name="HSplitContainer" type="HSplitContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3
tooltip_text = "Hello"
split_offset = 100

[node name="DialogueButtonBox" type="VBoxContainer" parent="HSplitContainer"]
layout_mode = 2

[node name="TextEdit" type="TextEdit" parent="HSplitContainer"]
layout_mode = 2
size_flags_vertical = 3

[connection signal="button_up" from="HBoxContainer/Buttons/SaveButton" to="." method="_on_save_button_button_up"]
[connection signal="button_up" from="HBoxContainer/Buttons/SaveAsButton" to="." method="_on_save_as_button_button_up"]
[connection signal="button_up" from="HBoxContainer/Buttons/LoadButton" to="." method="_on_load_button_button_up"]
